--- a/curso-cypress/package.json
+++ b/curso-cypress/package.json
@@ -9,7 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "cypress": "^3.7.0"
   }
 }
