--- a/curso-cypress/package.json
+++ b/curso-cypress/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
-    "cypress": "^3.7.0"
+  "cypress": "^3.7.0",
+  "cypress-dark": "^1.7.14"
   }
 }
